# midisommar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: fetch_midm_database.py  mock_ableton.py
src/midisommar/: __init__.py  cli.py  cli_spec.py  inference.py
src/midisommar/audio/: __init__.py  capture.py  stream.py  track.py
src/midisommar/core/: __init__.py  device.py  event.py  vocab.py
src/midisommar/data/: drums.py  midi.py  pairs.py  record.py  snapshot.py
src/midisommar/gui/: __init__.py  app.py  forms.py  invoke.py  presets.py  workers.py
src/midisommar/model/: __init__.py  checkpoint.py  factored.py
src/midisommar/osc/: __init__.py  ableton.py  listen.py
src/midisommar/realtime/: __init__.py  clock.py  duet.py  fake_human.py  live.py  partner.py  play.py  scheduler.py
src/midisommar/training/: metrics.py  train.py
src/osc_genai/: __init__.py  ableton.py  cli.py  data.py  duet.py  fake_human.py  generation.py  inference.py  live.py  metrics.py  model.py  play.py  repr.py  scheduler.py  train.py  vocab.py
src/osc_genai/data/: midi.py
src/osc_genai/model/: checkpoint.py
src/osc_genai/osc/: ableton.py
src/osc_genai/realtime/: clock.py  duet.py  fake_human.py  live.py  play.py
src/osc_genai/training/: __init__.py  metrics.py  train.py
tests/: test_ableton_mock.py  test_audio_partner.py  test_cli_spec.py  test_conditional.py  test_data.py  test_device.py  test_drums.py  test_duet.py  test_fake_human.py  test_generation.py  test_gui.py  test_gui_qt.py  test_link.py  test_live.py  test_metrics.py  test_model.py  test_pairs.py  test_record.py  test_repr.py  test_scheduler.py  test_segment.py  test_snapshot.py  test_train.py  test_vocab.py  test_yin.py
